@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@ import java.util.Locale;
 public class bug6277243 {
 
     public static void main(String[] args) throws Exception {
-        Locale root = new Locale("", "", "");
+        Locale root = Locale.of("", "", "");
         if (!Locale.ROOT.equals(root)) {
             throw new RuntimeException("Locale.ROOT is not equal to Locale(\"\", \"\", \"\")");
         }
